# pronesoft-ecf-sdks

./: .gitignore  api_associated_companies.go  api_authentication.go  api_automated_certification.go  api_digital_certificates.go  api_documents_sent.go  api_reports.go  configuration.go  go.mod  model_account_type.go  model_additional_info.go  model_approval_item.go  model_approval_list_response.go  model_associated_company.go  model_associated_company_subscription_plan.go  model_billing_indicator.go  model_buyer.go  model_company_document_metrics_main_business.go  model_company_document_metrics_totals.go  model_company_metrics.go  model_create_associated_company_201_response.go  model_create_tax_sequence_request.go  model_delete_associated_company_200_response.go  model_discount_or_surcharge.go  model_document_stats_response.go  model_environment.go  model_error_response.go  model_get_next_number_200_response.go  model_get_next_number_200_response_data.go  model_invoice_type.go  model_item_additional_tax.go  model_item_discount_inner.go  model_page.go  model_payment_method.go  model_print_format.go  model_rate_limit_error_response.go  model_received_document.go  model_received_document_stats_response.go  model_reference_info.go  model_sent_document_list_response.go  (+14 more)
rust/: Cargo.toml  README.md
rust/.openapi-generator/: FILES
rust/docs/: AccountType.md  AdditionalInfo.md  AdditionalTax.md  AdjustmentType.md  AlternativeCurrency.md  ApprovalItem.md  ApprovalListResponse.md  AssociatedCompaniesApi.md  AssociatedCompany.md  AssociatedCompanySubscription.md  AssociatedCompanySubscriptionPlan.md  AuthenticationApi.md  AutomatedCertificationApi.md  BillingIndicator.md  Buyer.md  CertificationCompletedPayload.md  CertificationNiche.md  CertificationNicheNicheItemsInner.md  CertificationStatus.md  CommercialApproval.md  CommercialApprovalPayload.md  CommercialApprovalsApi.md  CompanyDocumentMetrics.md  CompanyDocumentMetricsGroupByStatusInner.md  CompanyDocumentMetricsGroupByStatusInnerCount.md  CompanyDocumentMetricsMainBusiness.md  CompanyDocumentMetricsTotals.md  CompanyMetrics.md  CompanyMetricsDocumentsStatus.md  CreateAssociatedCompany201Response.md  CreateTaxSequence201Response.md  CreateTaxSequenceRequest.md  DgiiMensaje.md  (+87 more)
(+3615 files in other folders)
